--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
