--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,10 @@ on:
 jobs:
   buildAndTest:
 
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+     matrix:
+      os: [macos-latest, windows-latest, ubuntu-18.04]
 
     steps:
     - uses: actions/checkout@v2
