--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     strategy:
+     max-parallel: 2
      matrix:
       os: [macos-latest, windows-latest, ubuntu-latest]
 
