--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,11 +9,7 @@ on:
 jobs:
   buildAndTest:
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-     max-parallel: 3
-     matrix:
-      os: [macos-latest, windows-latest, ubuntu-latest]
+    runs-on: ubuntun-latest
 
     steps:
     - uses: actions/checkout@v2
