--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   buildAndTest:
 
-    runs-on: ubuntun-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
