--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -1,6 +1,8 @@
 on:
   push:
-    # Sequence of patterns matched against refs/tags
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
