--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -11,6 +11,7 @@ name: Create Release
 jobs:
   build:
     name: Create Release
+    if: github.event.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
