--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
   release:
     name: Create Release
     needs: buildAndTest
-    if: github.event.ref == 'refs/heads/main'
+    if: github.event_name == 'pull_request' && github.event.ref == 'refs/heads/Firstbranch'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
